Update link speed and add tech fee link

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<div id="mirrorum">
 		<h1>mirror.umd.edu</h1>
 		<p>This is the <a href="https://umd.edu">University of Maryland</a> Linux Users Group's public mirror of free and open-source software.</p>
-		<p>This mirror is run by student volunteers using rackspace and 1Gbit/s Internet2-capable network provided by the <a href="https://it.umd.edu/">Division of IT</a>.</p>
+		<p>This mirror is run by student volunteers using rackspace and 20Gbit/s Internet2-capable network provided by the <a href="https://it.umd.edu/">Division of IT</a>. The Mirror is partially supported by the <a href="https://it.umd.edu/governance/ITAC/tech-fee-proposals" target="_blank">Student Technology Fee</a>.</p>
 		<h2>News</h2>
 		<ul>
 			<li><em>24 July 2018:</em> After months of assorted delays, we are extremely happy to announce that we are now running on new hardware in a new datacenter!! More details to come...</li>
