Add Antergos EOL announcement

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 		<p>This mirror is run by student volunteers using rackspace and 20Gbit/s Internet2-capable network provided by the <a href="https://it.umd.edu/">Division of IT</a>. The Mirror is partially supported by the <a href="https://it.umd.edu/governance/ITAC/tech-fee-proposals" target="_blank">Student Technology Fee</a>.</p>
 		<h2>News</h2>
 		<ul>
+			<li><em>22 May 2019:</em> The Antergos project has <a href="https://antergos.com/blog/antergos-linux-project-ends/" target="_blank">announced that they are closing down</a>. They plan to release an update which will convert existing Antergos installs to point to the main Arch Linux servers for updates. After that time, we will be removing Antergos from this host to reclaim the space for other projects.</li>
 			<li><em>18 October 2018:</em> Added mirrors of <a href="https://www.devuan.org/" target="_blank">Devuan Linux</a> and <a href="https://www.eclipse.org/" target="_blank">Eclipse</a>.</li>
 			<li><em>24 July 2018:</em> After months of assorted delays, we are extremely happy to announce that we are now running on new hardware in a new datacenter!! More details to come...</li>
 			<li><em>4 June 2018:</em> A campus-wide power outage on Sunday evening caused hardware problems for us which led to a 31-hour outage. This machine is now back up and running, and our replacement hardware should be ready to switch in the next week or two.</li>
