--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 					<td><a href="https://mxlinux.org">MX Linux</a></td>
 					<td><a href="/mxlinux-iso/">CD images</a> | <a href="/mxlinux/">packages</a></td>
 					<td>All releases</td>
-					<td>rsync://mirror.umd.edu/mxlinux-iso/<span id="stats_mxlinux_iso"></span><br/>rsync://mirror.umd.edu/mxlinux/<span id="stats_mxlinux"></span></td>
+					<td>rsync://mirror.umd.edu/mxlinux-iso/<span id="stats_mxlinux-iso"></span><br/>rsync://mirror.umd.edu/mxlinux/<span id="stats_mxlinux"></span></td>
 				</tr>
 				<tr>
 					<td><a href="http://www.opensuse.org/">OpenSUSE</a></td>
