--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 		<p>This mirror is run by student volunteers using rackspace and 20Gbit/s Internet2-capable network provided by the <a href="https://it.umd.edu/">Division of IT</a>. The Mirror is partially supported by the <a href="https://it.umd.edu/governance/ITAC/tech-fee-proposals" target="_blank">Student Technology Fee</a>.</p>
 		<h2>News</h2>
 		<ul>
+			<li><em>27 January 2021:</em> An issue with our DNS had us down appear to be offline for around 18 hours. If you are reading this, the issue has been fixed.</li>
 			<li><em>01 October 2020:</em> The MozDev.org OSS Hosting site has been shut down as of the end of July 2020. We will keep all mirrored content as it was in the last successful sync on 31 July 2020, but there will be no further updates.</li>
 			<li><em>31 October 2019:</em> The Antergos project has shut down and has turned off much of their infrastructure, including their website (which now redirects to Archive.org). As originally announced on 22 May 2019, we are removing our mirror of Antergos.</li>
 			<li><em>23 June 2019:</em> <strong>We are continuing to monitor our hardware, but it seems the indicators of drive failure were false positives. Our current working theory is that other work in the datacenter may have disturbed a loose connection between the SATA HBA Card and the SATA backplane.</strong> <strike>We are currently experiencing possible failure of three (out of 14) hard drives. As of now, we are still operational (thanks to ZFS!!), and we are monitoring the situation.</strike></li>
