Fix OpenSUSE link

--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
 				</tr>
 				<tr>
 					<td><a href="http://www.opensuse.org/">OpenSUSE</a></td>
-					<td><a href="/opensuse/distribution/">CD images</a></td>
-					<td>Recent releases</td>
+					<td><a href="/opensuse/">Mirror Contents</a></td>
+					<td>Recent releases (opensuse-hotstuff)</td>
 					<td>rsync://mirror.umd.edu/opensuse/<span id="stats_opensuse"></span></td>
 				</tr>
 				<tr>
