note not to contact DIT

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 				</tr>
 			</tbody>
 		</table>
-		<p>Contact us: <em>mirror-admins at umd dot edu</em></p>
+		<p>Contact us: <em>mirror-admins at umd dot edu</em>.<br><strong>Do NOT contact the UMD DIT Helpdesk</strong> - they cannot help you and they will tell you to contact us directly.</p>
 		<div id="chart">
 			<!--<div id="chart_hour"></div><div id="chart_day"></div><br>-->
 			<!--<div><img src="/bw_minutely.svg" alt="Graph of throughput Last Hour"></div><div><img src="/bw_hourly.svg" alt="Graph of throughput Last Day"></div>-->
