--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 		<p>This mirror is run by student volunteers using rackspace and 20Gbit/s Internet2-capable network provided by the <a href="https://it.umd.edu/">Division of IT</a>. The Mirror is partially supported by the <a href="https://it.umd.edu/governance/ITAC/tech-fee-proposals" target="_blank">Student Technology Fee</a>.</p>
 		<h2>News</h2>
 		<ul>
+			<li><em>16 March 2022:</em> Mirror Admins have a new email address (look under the software list).</li>
 			<li><em>12 December 2021:</em> Add mirror of <a href="https://www.msys2.org/" target="_blank">MSYS2</a>.</li>
 			<li><em>28 July 2021:</em> Added mirror of <a href="https://zorinos.com/" target="_blank">Zorin OS</a> free ISOs (Core, Lite, and Education).</li>
 			<li><em>27 January 2021:</em> An issue with our DNS had us down appear to be offline for around 18 hours. If you are reading this, the issue has been fixed.</li>
