--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 		<p>This mirror is run by student volunteers using rackspace and 20Gbit/s Internet2-capable network provided by the <a href="https://it.umd.edu/">Division of IT</a>. The Mirror is partially supported by the <a href="https://it.umd.edu/governance/ITAC/tech-fee-proposals" target="_blank">Student Technology Fee</a>.</p>
 		<h2>News</h2>
 		<ul>
+			<li><em>25 November 2024:</em> The GNOME project has discontinued all public mirroring, and no longer provides an upstream rsync service. We have removed our GNOME mirror.</li>
 			<li><em>10 May 2023:</em> <strong>We have an opening for a new student (undergrad or grad) mirror admin. Linux skills required. Email us for details if you are interested.</strong></li>
 			<li><em>16 March 2022:</em> Mirror Admins have a new email address (look under the software list).</li>
 			<li><em>12 December 2021:</em> Add mirror of <a href="https://www.msys2.org/" target="_blank">MSYS2</a>.</li>
@@ -132,12 +133,6 @@
 					<td><a href="/gimp/">downloads</a></td>
 					<td>All releases</td>
 					<td>rsync://mirror.umd.edu/gimp/<span id="stats_gimp"></span></td>
-				</tr>
-				<tr>
-					<td><a href="http://www.gnome.org/">GNOME</a></td>
-					<td><a href="/gnome/">downloads</a></td>
-					<td>All releases</td>
-					<td>rsync://mirror.umd.edu/gnome/<span id="stats_gnome"></span></td>
 				</tr>
 				<tr>
 					<td><a href="http://www.kodi.tv/">Kodi (formerly XBMC)</a></td>
