local changes on server

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 		<h2>News</h2>
 		<ul>
 			<li><em>25 November 2024:</em> The GNOME project has discontinued all public mirroring, and no longer provides an upstream rsync service. We have removed our GNOME mirror.</li>
+			<li><em>25 October 2023:</em> We have locally blocked a DDoS attack that was causing mirror instability. We have asked campus to block those IP ranges at the border firewalls. Please let us know if you experience any issues.</li>
+			<li><em>20 August 2023:</em> Sabayon Linux links are dead. It looks like this project was replaced with MocaccinoOS. We are looking into mirroring that.</li>
 			<li><em>10 May 2023:</em> <strong>We have an opening for a new student (undergrad or grad) mirror admin. Linux skills required. Email us for details if you are interested.</strong></li>
 			<li><em>16 March 2022:</em> Mirror Admins have a new email address (look under the software list).</li>
 			<li><em>12 December 2021:</em> Add mirror of <a href="https://www.msys2.org/" target="_blank">MSYS2</a>.</li>
@@ -187,12 +189,6 @@
 					<td><a href="/packages.ros.org/">packages</a> | <a href="/roswiki/">wiki</a></td>
 					<td>All releases</td>
 					<td>rsync://mirror.umd.edu/packages.ros.org/<span id="stats_ros-packages"></span><br/>rsync://mirror.umd.edu/ros.org/<span id="stats_ros-www"></span></td>
-				</tr>
-				<tr>
-					<td><a href="http://www.sabayon.org/">Sabayon Linux</a></td>
-					<td><a href="/sabayonlinux/">CD images + packages</a></td>
-					<td>All releases</td>
-					<td>rsync://mirror.umd.edu/sabayonlinux/<span id="stats_sabayonlinux"></span></td>
 				</tr>
 				<tr>
 					<td><a href="http://www.turnkeylinux.org/">TurnKey Linux</a></td>
